adding permission work

--- a/templates/base.html
+++ b/templates/base.html
@@ -81,6 +81,7 @@
         <script src="{% static 'js/contextconstraint.js' %}"></script>
         <script src="{% static 'js/permission.js' %}"></script>
         <script src="{% static 'js/task.js' %}"></script>
+        <script src="{% static 'js/work_profile.js' %}"></script>
         
 <!--        <script src="{% static 'js/scenario.js' %}"></script>
         <script src="{% static 'js/permission.js' %}"></script>
