--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,12 @@
 
         <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
         <style>
+            .modal.modal-wide .modal-dialog {
+              width: 90%;
+            }
+            .modal-wide .modal-body {
+              overflow-y: auto;
+            }
             body {
                 padding-top: 50px;
                 padding-bottom: 20px;
@@ -82,8 +88,9 @@
         <script src="{% static 'js/permission.js' %}"></script>
         <script src="{% static 'js/task.js' %}"></script>
         <script src="{% static 'js/work_profile.js' %}"></script>
+        <script src="{% static 'js/scenario.js' %}"></script>
         
-<!--        <script src="{% static 'js/scenario.js' %}"></script>
+<!--        
         <script src="{% static 'js/permission.js' %}"></script>
         <script src="{% static 'js/task.js' %}"></script>
         <script src="{% static 'js/role.js' %}"></script>
@@ -99,7 +106,13 @@
             e.src='//www.google-analytics.com/analytics.js';
             r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
             ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-        </script>   
+        </script>
+        <script>
+            $(".modal-wide").on("show.bs.modal", function() {
+              var height = $(window).height() - 200;
+              $(this).find(".modal-body").css("max-height", height);
+            });        
+        </script>
         {% block scripts %}
 		{% endblock scripts %}
     </body>
