--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -48,17 +48,6 @@
                     <button id="create_task_btn" type="button" class="btn btn-default" title='Create Task' data-toggle="modal" data-target="#task_modal"><img src="{% static 'img/task.gif' %}" align="absmiddle"></button>
                     <button id="create_work_profile_btn" type="button" class="btn btn-default" title='Create Work Profile' data-toggle="modal" data-target="#work_profile_modal"><img src="{% static 'img/profile.gif' %}" align="absmiddle"></button>
                     <button id="create_role_btn" type="button" class="btn btn-default" title='Create Role' data-toggle="modal" data-target="#role_modal"><img src="{% static 'img/facemask.gif' %}" align="absmiddle"></button>
-                    
-                    <!-- DELETE AFTER
-                    
-                    <button type="button" class="btn btn-default" title='Create Context Constraint' data-toggle="modal" data-target="#create_constraint_modal"><img src="{% static 'img/constraint.gif' %}" align="absmiddle"></button>
-                    <button type="button" class="btn btn-default" title='Create Scenario' data-toggle="modal" data-target="#create_scenario_modal"><img src="{% static 'img/film.gif' %}" align="absmiddle"></button>
-                    
-                    <button type="button" class="btn btn-default" title='Create Permission' data-toggle="modal" data-target="#create_permission_modal"><img src="{% static 'img/key.gif' %}" align="absmiddle"></button>
-                    <button type="button" class="btn btn-default" title='Create Task' data-toggle="modal" data-target="#create_task_modal"><img src="{% static 'img/task.gif' %}" align="absmiddle"></button>
-                    <button type="button" class="btn btn-default" title='Create Work Profile' data-toggle="modal" data-target="#create_work_profile_modal"><img src="{% static 'img/profile.gif' %}" align="absmiddle"></button>
-                    <button type="button" class="btn btn-default" title='Create Role' data-toggle="modal" data-target="#create_role_modal"><img src="{% static 'img/facemask.gif' %}" align="absmiddle"></button>
-                    -->
 				</div>
 				<div class="btn-group" role="group" aria-label="...">
                     <button type="button" class="btn btn-default" title='Define Trace-Links' data-toggle="modal" data-target="#define_trace_links_modal"><img src="{% static 'img/trace.gif' %}" align="absmiddle"></button>
@@ -557,15 +546,20 @@
 </div>
 
 <!-- 5. Create Scenario Modal -->
-<div class="modal fade" id="create_scenario_modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div class="modal modal-wide fade" id="scenario_modal" tabindex="-1" role="dialog" aria-labelledby="scenario_modal_title" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Create new scenario</h4>
+        <h4 class="modal-title" id="scenario_modal_title"></h4>
       </div>
       <div class="modal-body">
-            Add layout and widgets here ...
+        <div class="row">
+        <div class="col-md-3">A</div>
+        <div class="col-md-9">
+            <div id="digraph" style='background-color:yellow; height: 500px; width:100%;left:0px;'></div>
+        </div>
+        </div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -837,7 +831,8 @@
   </div>
 </div>
 
-<!-- Permission Cardinality Constraints modal-->
+<!-- Permissions modals -->
+<!-- Permission - Cardinality Constraints modal-->
 <div class="modal fade" id="perm_cardinality_constraint_modal" tabindex="-1" role="dialog" aria-labelledby="perm_cardinality_constraint_title" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -856,8 +851,87 @@
   </div>
 </div>
 
-<!------- context menu ------>
+<!-- Permission - SSD Constraints modal -->
+<div class="modal fade" id="perm_ssd_constraint_modal" tabindex="-1" role="dialog" aria-labelledby="perm_ssd_constraint_modal_title" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="perm_ssd_constraint_modal_title"></h4>
+      </div>
+      <div class="modal-body">
+        <form>
+            <div class="row">
+                <div class="col-md-9">
+                  <div class="form-group">
+                    <label for="perm_ssd_available_permissions">Available Permissions</label>
+                    <select id="perm_ssd_available_permissions" multiple class="form-control">
+                    </select>     
+                    <input id="add_ssd_constraint" class="btn btn-default" type="button" value="Add SSD Constraint">
+                  </div>
+                </div>  
+            </div>
+            <div class="row">
+                <div class="col-md-9">
+                  <div class="form-group">
+                    <label for="perm_ssd_direct_mutex">Direct Mutual Exclusions</label>
+                    <select id="perm_ssd_direct_mutex" multiple class="form-control">
+                    </select>     
+                    <input id="remove_ssd_constraint" class="btn btn-default" type="button" disabled="false" value="Remove SSD Constraint">     
+                  </div>
+                </div>  
+            </div>
+        </form>      
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button id="save_task_btn" type="button" class="btn btn-primary">Save</button>
+      </div>
+    </div>
+  </div>
+</div>
 
+<!-- Permission - Context Constraints modal -->
+<div class="modal fade" id="permission_CC_modal" tabindex="-1" role="dialog" aria-labelledby="permission_CC_modal_title" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="permission_CC_modal_title"></h4>
+      </div>
+      <div class="modal-body">
+        <form>
+            <div class="row">
+                <div class="col-md-9">
+                  <div class="form-group">
+                    <label for="permission_CC_available_CC">Available Context Constraints</label>
+                    <select id="permission_CC_available_CC" multiple class="form-control">
+                    </select>     
+                    <input id="link_permission_CC" class="btn btn-default" type="button" value="Link Context Constraint">
+                  </div>
+                </div>  
+            </div>
+            <div class="row">
+                <div class="col-md-9">
+                  <div class="form-group">
+                    <label for="permission_CC_linked_CC">Linked Context Constraints</label>
+                    <select id="permission_CC_linked_CC" multiple class="form-control">
+                    </select>     
+                    <input id="unlink_permission_CC" class="btn btn-default" type="button" disabled="false" value="Unlink Context Constraint">     
+                  </div>
+                </div>  
+            </div>
+        </form>      
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button id="save_task_btn" type="button" class="btn btn-primary">Save</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!------- context menu ------>
 
 <div id="context-menu">
   <ul class="dropdown-menu" role="menu">
@@ -871,8 +945,8 @@
     <li><a tabindex="-1" href="#">Create Permission</a></li>
     <li><hr style="margin:5px;"></li>
     <li><a id="perm_cardinality_constraint" href="#" onclick="permission_cardinality_constraints()">Cardinality Constraints</a></li>
-    <li><a tabindex="-1" href="#">SSD Constraints</a></li>
-    <li><a tabindex="-1" href="#">Context Constraints</a></li>
+    <li><a tabindex="-1" href="#" onclick="permission_ssd_constraints()">SSD Constraints</a></li>
+    <li><a tabindex="-1" href="#" onclick="permission_CC()">Context Constraints</a></li>
     <li><hr style="margin:5px;"></li>
     <li><a tabindex="-1" href="#">Delete Permission</a></li>
   </ul>
