--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -831,6 +831,53 @@
   </div>
 </div>
 
+<!-- Scenario modals -->
+<!-- Scenario Step modal -->
+<div class="modal fade" id="step_modal" tabindex="-1" role="dialog" aria-labelledby="step_modal_title" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="step_modal_title"></h4>
+      </div>
+      <div class="modal-body">
+        <form>
+            <div class="row">
+                <div class="col-md-9">
+                  <div class="form-group">
+                    <label for="step_actor">Actor</label>
+                    <input type="text" class="form-control" id="step_actor" placeholder="Enter actor name" required>
+                  </div>              
+                </div>  
+            </div>
+            <div class="row">
+                <div class="col-md-9">
+                  <div class="form-group">
+                    <label for="step_action">Action</label>
+                    <input type="text" class="form-control" id="step_action" placeholder="Enter action name" required>
+                  </div>              
+                </div>  
+            </div>
+            <div class="row">
+                <div class="col-md-9">
+                  <div class="form-group">
+                    <label for="step_target">Target</label>
+                    <input type="text" class="form-control" id="step_target" placeholder="Enter target name" required>
+                  </div>              
+                </div>  
+            </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+        <button id="save_objective_btn" type="button" class="btn btn-primary">Save</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
 <!-- Permissions modals -->
 <!-- Permission - Cardinality Constraints modal-->
 <div class="modal fade" id="perm_cardinality_constraint_modal" tabindex="-1" role="dialog" aria-labelledby="perm_cardinality_constraint_title" aria-hidden="true">
