scenario modal add vis.js

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1111,7 +1111,7 @@ jQuery.fn.extend({
         {id: 5, label: 'Node 5'}
     ]);
 
-    nodes.add({id: 6, label: 'Node 6', x:1200, y:1500});
+    nodes.add({id: 6, label: 'Node 6', physics: false, x:50, y:50});
     
     // create an array with edges
     var edges = new vis.DataSet([
