--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
         <style>
             #digraph {
                 width: 100%;
-                height: 500px;
+                height: 550px;
                 background-color:whitesmoke;
                 border: 1px solid lightgray;
             }
@@ -89,7 +89,7 @@
     </div> <!-- /container -->      
       
 		<script src="{% static 'js/vendor/jquery-1.11.2.min.js' %}"></script>
-        <script src="{% static 'js/vendor/vis.min.js' %}"></script>
+        <script src="{% static 'js/vendor/vis.js' %}"></script>
         
         <script src="{% static 'js/vendor/bootstrap.min.js' %}"></script>
 		<script src="{% static 'js/vendor/jquery-ui.js' %}"></script>
