scenario step graph interim backup

--- a/templates/base.html
+++ b/templates/base.html
@@ -87,13 +87,16 @@
           </div>
         </nav>
     </div> <!-- /container -->      
-      
+        <script>
+
+        </script>
 		<script src="{% static 'js/vendor/jquery-1.11.2.min.js' %}"></script>
         <script src="{% static 'js/vendor/vis.js' %}"></script>
         
         <script src="{% static 'js/vendor/bootstrap.min.js' %}"></script>
 		<script src="{% static 'js/vendor/jquery-ui.js' %}"></script>
         <script src="{% static 'js/vendor/bootstrap-contextmenu.js' %}"></script>
+        <script src="{% static 'js/base.js' %}"></script>
         <script src="{% static 'js/main.js' %}"></script>
         <script src="{% static 'js/csrf.js' %}"></script>
         <script src="{% static 'js/objective.js' %}"></script>
